--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     }
 
     let code = generateCode();
-    let clientId = null;
+    let clientId = '';
     let isInitiator = false;
     let isConnected = false;
     let maxClients = 2;
-    let totalClients = 1;
+    let totalClients = 0;
     let peerConnections = new Map();
     let dataChannels = new Map();
     let connectionTimeouts = new Map();
@@ -58,6 +58,8 @@
     const maxRetries = 2;
     let candidatesQueues = new Map();
     let processedMessageIds = new Set();
+    let userNumber = null;
+    let userNumbers = new Map(); // clientId -> userNumber
 
     const statusElement = document.getElementById('status');
     const codeDisplayElement = document.getElementById('codeDisplay');
@@ -107,31 +109,48 @@
           clientId = message.clientId;
           maxClients = message.maxClients;
           isInitiator = message.isInitiator;
-          console.log(`Initialized client ${clientId}, maxClients: ${maxClients}, isInitiator: ${isInitiator}`);
+          totalClients = 1;
+          if (isInitiator) {
+            userNumber = 1;
+            userNumbers.set(clientId, 1);
+            console.log(`Assigned User 1 to initiator ${clientId}`);
+          }
+          console.log(`Initialized client ${clientId}, userNumber: ${userNumber}, maxClients: ${maxClients}, isInitiator: ${isInitiator}`);
           initializeMaxClientsUI();
           updateMaxClientsUI();
-          if (isInitiator) {
-            setMaxClients(3);
-          }
         }
         if (message.type === 'initiator-changed') {
           console.log(`Initiator changed to ${message.newInitiator} for code: ${code}`);
           isInitiator = message.newInitiator === clientId;
           initializeMaxClientsUI();
           updateMaxClientsUI();
-          if (isInitiator) {
-            peerConnections.forEach((pc, id) => {
-              if (pc.connectionState === 'disconnected' || pc.connectionState === 'failed') {
-                console.log(`Restarting connection with ${id} as new initiator`);
-                cleanupPeerConnection(id);
-                startPeerConnection(id, true);
-              }
-            });
+          if (isInitiator && !userNumbers.has(clientId)) {
+            userNumber = Math.max(...userNumbers.values(), 0) + 1;
+            userNumbers.set(clientId, userNumber);
+            console.log(`Assigned User ${userNumber} to new initiator ${clientId}`);
           }
         }
         if (message.type === 'join-notify' && message.code === code) {
           totalClients = message.totalClients;
           console.log(`Join-notify received for code: ${code}, new client: ${message.clientId}, total: ${totalClients}, maxClients: ${maxClients}`);
+          if (isInitiator && message.clientId !== clientId) {
+            const newUserNumber = totalClients;
+            userNumbers.set(message.clientId, newUserNumber);
+            console.log(`Assigned User ${newUserNumber} to client ${message.clientId}`);
+            // Broadcast updated join-notify with userNumber
+            socket.send(JSON.stringify({ 
+              type: 'join-notify', 
+              clientId: message.clientId, 
+              totalClients, 
+              code, 
+              userNumber: newUserNumber 
+            }));
+          }
+          if (message.clientId === clientId && message.userNumber != null) {
+            userNumber = message.userNumber;
+            userNumbers.set(clientId, userNumber);
+            console.log(`Received own userNumber: User ${userNumber} for client ${clientId}`);
+          }
           updateMaxClientsUI();
           if (isInitiator && message.clientId !== clientId && !peerConnections.has(message.clientId)) {
             console.log(`Initiating peer connection with new client ${message.clientId}`);
@@ -141,6 +160,10 @@
         if (message.type === 'client-disconnected') {
           totalClients = message.totalClients;
           console.log(`Client ${message.clientId} disconnected from code: ${code}, total: ${totalClients}`);
+          if (isInitiator) {
+            userNumbers.delete(message.clientId);
+            console.log(`Removed userNumber for client ${message.clientId}`);
+          }
           cleanupPeerConnection(message.clientId);
           updateMaxClientsUI();
         }
@@ -288,6 +311,15 @@
 
       peerConnection.ondatachannel = (event) => {
         console.log(`Received data channel from ${targetId}`);
+        if (dataChannels.has(targetId)) {
+          console.log(`Closing existing data channel for ${targetId}`);
+          const existingChannel = dataChannels.get(targetId);
+          existingChannel.onmessage = null;
+          existingChannel.onopen = null;
+          existingChannel.onerror = null;
+          existingChannel.onclose = null;
+          existingChannel.close();
+        }
         dataChannel = event.channel;
         setupDataChannel(dataChannel, targetId);
         dataChannels.set(targetId, dataChannel);
@@ -343,8 +375,8 @@
           console.error(`Invalid message format from ${targetId}:`, event.data);
           return;
         }
-        if (!data.messageId || !data.content) {
-          console.log(`Missing messageId or content from ${targetId}`);
+        if (!data.messageId || !data.content || data.userNumber == null) {
+          console.log(`Missing messageId, content, or userNumber from ${targetId}:`, data);
           return;
         }
         if (processedMessageIds.has(data.messageId)) {
@@ -352,17 +384,18 @@
           return;
         }
         processedMessageIds.add(data.messageId);
-        console.log(`Received message ${data.messageId} from ${targetId}:`, data.content);
+        const senderUserNumber = isInitiator ? (userNumbers.get(targetId) || data.userNumber) : data.userNumber;
+        console.log(`Received message ${data.messageId} from User ${senderUserNumber} (${targetId}):`, data.content);
         const messages = document.getElementById('messages');
-        if (!isInitiator || dataChannels.get(targetId) === dataChannel) {
-          messages.innerHTML += `<div class="text-gray-600">Them: ${data.content}</div>`;
-          messages.scrollTop = messages.scrollHeight;
-        }
+        const isSelf = senderUserNumber === userNumber;
+        const className = isSelf ? 'text-blue-600' : 'text-gray-600';
+        messages.innerHTML += `<div class="${className}">User ${senderUserNumber}: ${data.content}</div>`;
+        messages.scrollTop = messages.scrollHeight;
         if (isInitiator) {
           dataChannels.forEach((dc, id) => {
             if (id !== targetId && dc.readyState === 'open' && dc !== dataChannel) {
-              console.log(`Relaying message ${data.messageId} to ${id}:`, data.content);
-              dc.send(JSON.stringify(data));
+              console.log(`Relaying message ${data.messageId} to ${id} as User ${senderUserNumber}:`, data.content);
+              dc.send(JSON.stringify({ ...data, userNumber: senderUserNumber }));
             }
           });
         }
@@ -471,11 +504,11 @@
     }
 
     function sendMessage(content) {
-      if (content && dataChannels.size > 0) {
+      if (content && dataChannels.size > 0 && userNumber != null) {
         try {
           const messageId = generateMessageId();
-          const message = { messageId, content };
-          console.log(`Broadcasting message ${messageId}:`, content);
+          const message = { messageId, content, userNumber };
+          console.log(`Broadcasting message ${messageId} from User ${userNumber}:`, content);
           dataChannels.forEach((dataChannel, targetId) => {
             if (dataChannel.readyState === 'open') {
               dataChannel.send(JSON.stringify(message));
@@ -485,13 +518,15 @@
             }
           });
           const messages = document.getElementById('messages');
-          messages.innerHTML += `<div class="text-blue-600">You: ${content}</div>`;
+          messages.innerHTML += `<div class="text-blue-600">User ${userNumber}: ${content}</div>`;
           messages.scrollTop = messages.scrollHeight;
           document.getElementById('messageInput').value = '';
           processedMessageIds.add(messageId);
         } catch (error) {
           console.error('Error broadcasting message:', error);
         }
+      } else {
+        console.log(`Cannot send message: userNumber=${userNumber}, dataChannels.size=${dataChannels.size}`);
       }
     }
 
@@ -504,6 +539,7 @@
         console.log(`User connecting with code: ${code}`);
         socket.send(JSON.stringify({ type: 'join', code }));
         processedMessageIds.clear();
+        userNumber = null;
       }
     };
 
@@ -531,12 +567,14 @@
       connectionTimeouts.clear();
       retryCounts.clear();
       processedMessageIds.clear();
+      userNumbers.clear();
+      userNumber = null;
       isConnected = false;
       isInitiator = false;
       maxClients = 2;
-      totalClients = 1;
+      totalClients = 0;
       code = generateCode();
-      clientId = null;
+      clientId = '';
       codeDisplayElement.textContent = `Your code: ${code}`;
       statusElement.textContent = 'Generating new code...';
       console.log('New session started with code:', code);
