--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -71,10 +70,10 @@
     let dataChannels = new Map();
     let connectionTimeouts = new Map();
     let retryCounts = new Map();
-    const maxRetries = 1; // Reduced from 2
+    const maxRetries = 1;
     let candidatesQueues = new Map();
     let processedMessageIds = new Set();
-    let processedAnswers = new Set(); // New: Track processed answers
+    let processedAnswers = new Set();
     let username = null;
     let usernames = new Map();
 
@@ -252,15 +251,9 @@
       }
       const peerConnection = new RTCPeerConnection({
         iceServers: [
-          { urls: 'stun:stun.l.google.com:19302' },
-          { urls: 'stun:stun1.l.google.com:19302' },
-          { 
-            urls: ['turn:openrelay.metered.ca:80', 'turn:openrelay.metered.ca:443'], 
-            username: 'openrelayproject', 
-            credential: 'openrelayproject'
-          }
+          { urls: ['turn:openrelay.metered.ca:80', 'turn:openrelay.metered.ca:443'], username: 'openrelayproject', credential: 'openrelayproject' }
         ],
-        iceTransportPolicy: 'all'
+        iceTransportPolicy: 'relay'
       });
       peerConnections.set(targetId, peerConnection);
       candidatesQueues.set(targetId, []);
@@ -284,7 +277,7 @@
       peerConnection.onicegatheringstatechange = () => {
         console.log(`ICE gathering state for ${targetId}: ${peerConnection.iceGatheringState}`);
         if (peerConnection.iceGatheringState === 'complete' && isOfferer) {
-          clearTimeout(iceTimeout); // Clear timeout on completion
+          clearTimeout(iceTimeout);
           console.log(`ICE gathering complete, sending offer to ${targetId}`);
           socket.send(JSON.stringify({ type: 'offer', offer: peerConnection.localDescription, code, targetId }));
         }
@@ -307,7 +300,7 @@
           console.log(`WebRTC connection established with ${targetId} for code: ${code}`);
           isConnected = true;
           retryCounts.delete(targetId);
-          clearTimeout(iceTimeout); // Clear timeout on connection
+          clearTimeout(iceTimeout);
           updateMaxClientsUI();
         }
       };
@@ -461,7 +454,7 @@
         console.error(`Received invalid answer type from ${targetId}:`, answer.type);
         return;
       }
-      const answerKey = `${targetId}-${answer.sdp.substring(0, 50)}`; // Basic deduplication key
+      const answerKey = `${targetId}-${answer.sdp.substring(0, 50)}`;
       if (processedAnswers.has(answerKey)) {
         console.warn(`Duplicate answer from ${targetId} ignored`);
         return;
