--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
     </div>
   </div>
   <script>
+    // Utility to compute SHA-256 hash for deduplication
+    async function sha256(str) {
+      const buffer = new TextEncoder().encode(str);
+      const hash = await crypto.subtle.digest('SHA-256', buffer);
+      return Array.from(new Uint8Array(hash)).map(b => b.toString(16).padStart(2, '0')).join('');
+    }
+
     function generateCode() {
       const chars = 'abcdefghijklmnopqrstuvwxyz0123456789';
       let result = '';
@@ -249,10 +256,13 @@
         console.log(`Cleaning up existing connection with ${targetId}`);
         cleanupPeerConnection(targetId);
       }
+      const iceServers = [
+        { urls: ['turn:openrelay.metered.ca:80', 'turn:openrelay.metered.ca:443'], username: 'openrelayproject', credential: 'openrelayproject' },
+        { urls: 'turn:global.turn.twilio.com:3478', username: 'guest', credential: 'somepassword' }
+      ];
+      console.log(`Using ICE servers: ${JSON.stringify(iceServers)}`);
       const peerConnection = new RTCPeerConnection({
-        iceServers: [
-          { urls: ['turn:openrelay.metered.ca:80', 'turn:openrelay.metered.ca:443'], username: 'openrelayproject', credential: 'openrelayproject' }
-        ],
+        iceServers: iceServers,
         iceTransportPolicy: 'relay'
       });
       peerConnections.set(targetId, peerConnection);
@@ -268,9 +278,13 @@
 
       peerConnection.onicecandidate = (event) => {
         if (event.candidate) {
-          console.log(`Sending ICE candidate to ${targetId} for code: ${code}`);
+          console.log(`Sending ICE candidate to ${targetId} for code: ${code}: ${JSON.stringify(event.candidate)}`);
           socket.send(JSON.stringify({ type: 'candidate', candidate: event.candidate, code, targetId }));
         }
+      };
+
+      peerConnection.onicecandidateerror = (event) => {
+        console.error(`ICE candidate error for ${targetId}: address=${event.address}, port=${event.port}, errorCode=${event.errorCode}, errorText=${event.errorText}`);
       };
 
       let iceTimeout;
@@ -346,7 +360,7 @@
             console.log(`Retrying connection attempt ${retryCount + 1} with ${targetId}`);
             startPeerConnection(targetId, isOfferer);
           } else {
-            statusElement.textContent = 'Connection timed out. Please try again.';
+            statusElement.textContent = 'Connection failed. Please try again.';
           }
         }
       }, 10000);
@@ -443,7 +457,7 @@
       });
     }
 
-    function handleAnswer(answer, targetId) {
+    async function handleAnswer(answer, targetId) {
       console.log(`Handling answer from ${targetId} for code: ${code}`);
       const peerConnection = peerConnections.get(targetId);
       if (!peerConnection) {
@@ -454,20 +468,17 @@
         console.error(`Received invalid answer type from ${targetId}:`, answer.type);
         return;
       }
-      const answerKey = `${targetId}-${answer.sdp.substring(0, 50)}`;
+      // Use SHA-256 hash of full SDP for deduplication
+      const answerKey = await sha256(`${targetId}-${answer.sdp}`);
       if (processedAnswers.has(answerKey)) {
-        console.warn(`Duplicate answer from ${targetId} ignored`);
-        return;
-      }
-      processedAnswers.add(answerKey);
-      if (peerConnection.signalingState === 'stable' && peerConnection.connectionState === 'connected') {
-        console.warn(`Answer from ${targetId} ignored: connection already established (signalingState: ${peerConnection.signalingState}, connectionState: ${peerConnection.connectionState})`);
+        console.log(`Duplicate answer from ${targetId} ignored: ${answerKey}`);
         return;
       }
       if (peerConnection.signalingState !== 'have-local-offer') {
-        console.warn(`Unexpected signaling state for ${targetId}: ${peerConnection.signalingState}, expected have-local-offer`);
+        console.log(`Ignoring answer from ${targetId}: signalingState=${peerConnection.signalingState}, expected have-local-offer`);
         return;
       }
+      processedAnswers.add(answerKey);
       peerConnection.setRemoteDescription(new RTCSessionDescription(answer)).then(() => {
         console.log(`Successfully set remote description for answer from ${targetId}`);
         const queue = candidatesQueues.get(targetId) || [];
